--- a/GreenMakerLab/locales/pt/translation.json
+++ b/GreenMakerLab/locales/pt/translation.json
@@ -11,7 +11,7 @@
     },
         "footer":{
             "followUs": "Siga-nos",
-            "developed": "Desenolvido por Jefferson Teodoro - 2024"
+            "developed": "Desenvolvido por Jefferson Teodoro - 2024"
         },
     "home":{
         "title": "O que é Quimica Verde?",
